syntax = "proto3";

package com.KTA.devicespoof;

option java_multiple_files = true;
option java_package = "com.KTA.devicespoof.profile";
option java_outer_classname = "ProfileProto";

message Profile {
  string name = 1;
  DeviceInfo device_info = 2;
}

message DeviceInfo {
  string imei1 = 1;
  string imei2 = 2;
  string android_id = 3;
  string build_fingerprint = 4;
  string build_device = 5;
  string wifi_mac = 6;
  string wifi_ssid = 7;
  string wifi_bssid = 8;
  string bluetooth_mac = 9;
  string build_product = 10;
  string sim_serial = 11;
  string mobile_number = 12;
  string sim_operator = 13;
  string ads_id = 14;
  string media_drm_id = 15;
  string gsf_id = 16;
  string build_brand = 17;
  string build_hardware = 18;
  string build_board = 19;
  string build_id = 20;
  string build_display = 21;
  string build_type = 22;
  string build_tags = 23;
  string build_version_release = 24;
  string build_version_incremental = 25;
  string build_version_codename = 26;
  string build_version_security_patch = 27;
  string sim_subscriber_id = 28;
  string sim_country = 29;
  string sim_mnc = 30;
}